--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.35.1",
     "@remix-run/dev": "^1.6.7",
     "@remix-run/eslint-config": "^1.6.7",
     "@types/bcryptjs": "^2.4.2",
