--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "remix-serve build",
     "postinstall": "prisma generate",
     "typecheck": "tsc -b",
-    "validate": "run-p lint typecheck"
+    "validate": "run-p lint typecheck",
+    "test": "vitest"
   },
   "eslintIgnore": [
     "/node_modules",
@@ -40,6 +41,7 @@
     "@playwright/test": "^1.35.1",
     "@remix-run/dev": "^1.6.7",
     "@remix-run/eslint-config": "^1.6.7",
+    "@testing-library/react": "^14.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.5",
     "@types/marked": "^4.0.3",
@@ -50,6 +52,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
+    "happy-dom": "^10.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
@@ -58,7 +61,8 @@
     "tailwindcss": "^3.1.7",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.33.0"
   },
   "engines": {
     "node": ">=14"
