--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postinstall": "prisma generate",
     "typecheck": "tsc -b",
     "validate": "run-p lint typecheck",
-    "test": "vitest"
+    "test:e2e": "playwright test tests/e2e", 
+  "test:unit": "vitest tests/unit" 
   },
   "eslintIgnore": [
     "/node_modules",
