--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
@@ -39,6 +40,8 @@
     "msw": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "redux-persist": "^6.0.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
